--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -66,7 +66,7 @@
     color: var(--color-light);
 }
 
-.about_card p {
+.about_content p {
     margin: 2rem 0 2.6rem;
     color: var(--color-light);
 }
