--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -1,4 +1,4 @@
-.container .contact_container {
+.container.contact_container {
     width: 58%;
     display: grid;
     grid-template-columns: 30% 58%;
@@ -17,7 +17,7 @@
     border-radius: 1.2rem;
     text-align: center;
     border: 1px solid transparent;
-    transition: var(--color-primary-variant);
+    transition: var(--transistion);
 }
 
 .contact_option:hover {
@@ -33,6 +33,36 @@
 .contact_option a {
     margin-top: 0.7rem;
     display: inline-block;
-    font-size: 0.9rem;
+    font-size: 0.8rem;
+}
+
+/* ---------form */
+form {
+    display: flex;
+    flex-direction: column;
+    gap: 1.2rem;
+}
+
+input, textarea {
+     width: 100%;
+     padding: 1.5rem;
+     border-radius: 0.5rem;
+     background: transparent;
+     border: 2px solid var(--color-primary-variant);
+     resize: none;
+     color: var(--color-white);
+}
+
+@media screen and (max-width: 1024px){
+    .container.contact_container {
+        grid-template-columns: 1fr;
+        gap: 2rem;
+    }
+}
+
+@media screen and (max-width: 600px){
+  .container.contact_container {
+    width: var(--container-width-sm);
+  }  
 }
 
