--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -29,6 +29,8 @@
 
 .portfolio_item-cta {
     display: flex;
+    align-items: center;
+    justify-content: center;
     gap: 1rem;
     margin-bottom: 1rem;
 }
